# Strategos

./: README.md  pyproject.toml
src/strategos/: __init__.py
src/strategos.egg-info/: PKG-INFO  SOURCES.txt
